--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -1,11 +1,33 @@
 <body>
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">To Do List</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Link</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {{> loginButtons}}
+            </ul>
+        </div>
+    </div>
+
+
     <div class="container">
+
         <header>
-            <h1>Todo List ({{incompleteCount}})</h1>
+            <h1>To Do List ({{incompleteCount}})</h1>
             <label class="hide-completed">
                 <input type="checkbox" /> Hide Completed Tasks
             </label>
-            {{> loginButtons}}
+            
             {{#if currentUser}}
                 <form class="new-task">
                 <input type="text" name="text" placeholder="Type to add new tasks" />
